--- a/geolocation/map/templates/index.html
+++ b/geolocation/map/templates/index.html
@@ -6,11 +6,24 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
+	<!-- Leaflet for maps -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+	<!-- JQuery -->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	
 	<!-- My CSS -->
-	<link rel="stylesheet" href="{% static 'geodata/map.css' %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'map/map.css' %}"/>
 </head>
 
 <body>
 	<h1>Hola mundo</h1>
+	
+	
+	<div id="content-wrapper">
+		<!-- Main content goes here -->
+		
+	</div>
+	<script src="{% static 'map/map.js' %}"></script>
 </body>
 </html>
